--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "stylis": "^4.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^4.29.9"
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/stylis": "^4.2.0"
   }
 }
